# ScyllaDBChat

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: database.rs  handlers.rs  lib.rs  main.rs  serializable_duration.rs
src/actors/: broker_actor.rs  database_actor.rs  mod.rs  redis_actor.rs  websocket_actor.rs
src/middlewares/: mod.rs  test_token_middleware.rs  token_middleware.rs
tests/integration/: api.rs  database.rs
