[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-http = "3.4.0"
actix-service = "2.0.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
mockall = "0.11.4"
redis = { version = "0.23.3", features = ["tokio", "aio", "tokio-comp"] }
scylla = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serial_test = "2.0.0"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.1.3", features = ["redis"] }
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde"] }
